<resources>
    <string name="app_name">UpSkill</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_reg">reg</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="account_settings">Account Settings</string>
    <string name="email">Email</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="night_mode">Night mode</string>
    <string name="reg">Reg</string>
    <string name="mickey">Mickey</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
</resources>