<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homeborder"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ticksquareborder"
            android:title="@string/tasks" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/calendarborder"
            android:title="@string/calendar" />
    <item android:title="Account">

        <menu>

        <item
            android:id="@+id/nav_reg"
            android:icon="@drawable/calendarborder"
            android:title="@string/reg" />
        </menu>
    </item>
    </group>
</menu>