<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="15dp">


        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Nikol Bruno"
            android:textColor="@color/pink"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/pink" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_person_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="First Name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginLeft="5dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Mickey"
            android:layout_marginLeft="25dp"
            android:textSize="18dp"
            android:textColor="@color/lightgray"/>



    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lightgray"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_person_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Last Name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginLeft="5dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Bruno"
            android:layout_marginLeft="25dp"
            android:textSize="18dp"
            android:textColor="@color/lightgray"/>



    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lightgray"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="5dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/user_gmail_com"
            android:layout_marginLeft="25dp"
            android:textSize="18sp"
            android:textColor="@color/lightgray"/>



    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lightgray"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:background="@drawable/bord"
            android:text="Edit Profile"
            android:gravity="center"
            android:textColor="@color/pink"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_edit"
            android:layout_marginLeft="-10dp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:background="@drawable/bord"
            android:text="@string/night_mode"
            android:gravity="center"
            android:textColor="@color/pink"
            android:textSize="18sp"
            android:paddingLeft="15dp"
            android:drawableLeft="@drawable/ic_moon"
            android:layout_marginLeft="-10dp"/>



    </LinearLayout>


</LinearLayout>